--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://b54bbba3618942:17edcb2d@eu-cdbr-west-02.cleardb.net/heroku_2f6a25e2e637ca3?reconnect=true
+    url: ${CLEARDB_DATABASE_URL}
 
   jpa:
     show-sql: true
