--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.ckno</groupId>
     <artifactId>pet-project</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>pet-project</name>
     <description>Personal pet project</description>
 
