--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   datasource:
     url: ${CLEARDB_DATABASE_URL}
+    username: root
+    password:
 
   jpa:
     show-sql: true
@@ -10,3 +12,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+
+
+  data:
+    mongodb:
+      uri: ${MONGODB_IGP_URI}
