new s11 and endpoint to get superteam classification

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
 
   data:
     mongodb:
-      uri: ${MONGODB_IGP_URI:mongodb://localhost:27017/seasson_10?retryWrites=true&w=majority}
+      uri: ${MONGODB_IGP_URI:mongodb://localhost:27017/event_result?retryWrites=true&w=majority}
 
 com:
   ckno:
