--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,12 +6,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Set up JDK 17
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 17
-      - name: Build with Maven
+          distribution: 'zulu'
+          java-version: '17'
+      - name: Build
         run: mvn -B package --file pom.xml
