--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,12 @@ services:
 
   #service 2: definition of your spring-boot app
   app:                          #it is just a name, which will be used only in this file.
-    image: hello-service                 #name of the image after dockerfile executes
-    container_name: hello-service-app    #name of the container created from docker image
+    image: pet-project-image                 #name of the image after dockerfile executes
+    container_name: pet-project-app    #name of the container created from docker image
     environment:
       - MONGO_URL=mongodb://mongo:27017/checkout-local
     ports:
-      - "8080:8080"                       #docker containter port with your os port
+      - "8090:8080"                       #docker containter port with your os port
     links:
       - mongo
     depends_on:                           #define dependencies of this app
