--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.3'
 
 services:
-  #service 1: definition of mongo database
   mongo:
     image: mongo
     volumes:
@@ -9,17 +8,16 @@ services:
     container_name: mongodb
     restart: always
     ports:
-      - 27017:27017
+      - "27017:27017"
+    healthcheck:
+      test: "exit 0"
 
-  #service 2: definition of your spring-boot app
-  app:                          #it is just a name, which will be used only in this file.
-    image: pet-project-image                 #name of the image after dockerfile executes
-    container_name: pet-project-app    #name of the container created from docker image
-    environment:
-      - MONGO_URL=mongodb://mongo:27017/checkout-local
+  app:
+    image: pet-project-service
+    container_name: pet-project-app
     ports:
-      - "8090:8080"                       #docker containter port with your os port
-    links:
+      - "8080:8080"
+    depends_on:
       - mongo
-    depends_on:                           #define dependencies of this app
-      - mongo                                #dependency name (which is defined with this name 'db' in this file earlier)
+    healthcheck:
+      test: "exit 0"
